force-app/main/default/objects/Hiring_Manager__c/fields/Contact_number__c.field-meta.xml
<CustomField>
    <fullName>Contact_number__c</fullName>
    <label>Contact number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>