force-app/main/default/objects/Hiring_Manager__c/fields/Desigination__c.field-meta.xml
<CustomField>
    <fullName>Desigination__c</fullName>
    <label>Desigination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>HR Executive</fullName>
            </value>
            <value>
                <fullName>HR manager</fullName>
            </value>
            <value>
                <fullName>Requirements special list</fullName>
            </value>
            <value>
                <fullName>Sr.Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>