force-app/main/default/objects/Hiring_Manager__c/fields/Employement_type__c.field-meta.xml
<CustomField>
    <fullName>Employement_type__c</fullName>
    <label>Employement type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contract 2 hired</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>